# app

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: settings.py  urls.py
frontend/: views.py
frontend/static/css/: style.css
frontend/static/js/: script.js
frontend/templates/: index.html
service/: forms.py  urls.py  views.py
