[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Thijs Penning <t.j.penning@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
